--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -1,5 +1,5 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python  
 
 name: Python application
 
@@ -11,6 +11,7 @@ on:
 
 permissions:
   contents: read
+  actions: write
 
 jobs:
   build:
@@ -27,7 +28,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install pytest-cov
+        pip install coveralls
 
     - name: Test with pytest
       run: |
-        pytest
+        pytest --cov
+
+    - name: Upload coverage to Coveralls
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+      run: coveralls
