--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -1,9 +1,9 @@
-name: CI
+name: Autopep8 Code Check
 
 on: [push, pull_request]
 
 jobs:
-  lint:
+  autopep8:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
