--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,12 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Set up Python 3.11.10
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: '3.11.10'
 
       - name: Install dependencies
         run: |
@@ -20,4 +20,4 @@ jobs:
 
       - name: Run Pylint
         run: |
-          pylint --disable=all --enable=E,W hw2/hw2_debugging.py
+          pylint --disable=all --enable=E,W hw2/*.py 
