--- a/.github/workflows/flakes.yml
+++ b/.github/workflows/flakes.yml
@@ -7,16 +7,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Set up Python 3.11.10
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: '3.11.10'
 
       - name: Install dependencies
         run: |
           pip install pyflakes
 
       - name: Run Pyflakes
-        run: pyflakes hw2/hw2_debugging.py
+        run: pyflakes hw2/*.py
